<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:layout_above="@+id/buttonpanel"
    tools:context="com.codevars.a2o.Login">


    <LinearLayout
        android:id="@+id/blood"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        android:gravity="center"
        android:layout_above="@+id/buttonpanel"
        >

        <ImageView
            android:contentDescription="@string/image"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/blood"
            android:id="@+id/imageView" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:layout_marginTop="50sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/mobile"
            android:background="@drawable/round"
            android:inputType="number"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:layout_marginTop="50sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/password"
            android:background="@drawable/round"
            android:inputType="textPassword"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonmaterial"
        android:layout_margin="20sp"
        >

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

    </LinearLayout>


</RelativeLayout>



