<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:layout_above="@+id/buttonpanel"
    tools:context="com.codevars.a2o.Login">


    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        android:gravity="center"
        android:layout_above="@+id/buttonpanel"
        >

        <ImageView
            android:contentDescription="@string/image"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/user"
            android:id="@+id/imageView" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:layout_marginTop="50sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/fullname"
            android:background="@drawable/round"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/email"
            android:background="@drawable/round"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:hint="@string/password"
            android:background="@drawable/round"
            android:inputType="textPassword"/>

        <LinearLayout
            android:id="@+id/spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/round"
                android:entries="@array/bloodgroups"
                android:layout_weight="1"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:background="@drawable/round"
                android:entries="@array/convention"
                android:layout_weight="1"

                />


        </LinearLayout>


    </LinearLayout>







    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonmaterial"
        android:layout_margin="20sp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>



